fix: adjust header z-index and update cart div styling; add margin and height utility classes

--- a/output.css
+++ b/output.css
@@ -663,6 +663,10 @@ video {
   margin: 1.25rem;
 }
 
+.m-10 {
+  margin: 2.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -865,6 +869,10 @@ video {
 
 .h-\[\] {
   height: ;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .w-1\/2 {
